--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body><div>
     <h3>Food is my life</h3>
     <p>food is neccesary to everyone. we should eat time to time.</p>
+    <img src="pictures/foodiesfeed.com_burger-with-melted-cheese.jpg" alt="" width="500px">
+    <br>
+    <img src="pictures/Foods_(cropped).jpg" alt="" width="500px">
 </div>
 </body>
 </html>
